modificacion de colores

--- a/scss/secciones/_main-pages.scss
+++ b/scss/secciones/_main-pages.scss
@@ -41,130 +41,7 @@
 
 
 
-/*.mainProd {
-    .indiceprod {
-        position: relative;
 
-        a img {
-            position: relative;
-            width: 35em;
-            height: 32em;
-            margin: 15px;
-
-            &:hover {
-                opacity: 0.8;
-            }
-        }
-
-
-        .aclaracion {
-            position: relative;
-            display: block;
-            text-align: center;
-            opacity: 0.8;
-            font-family: 'Fauna One', serif;
-            color: #df96c2;
-            font-size: 2em;
-            background-color: #3a2b2a;
-            margin-left: 20px;
-            margin-right: 15px;
-        }
-
-    }
-
-    .divisiones {
-        margin-top: 200px;
-        font-size: 10px;
-
-        .subindpro {
-            display: flex;
-            justify-content: center;
-            font-size: 2em;
-
-            h2 {
-                color: rgb(242, 148, 165);
-            }
-
-            ul li a {
-                font-size: 1em;
-                font-family: 'Fauna One', serif;
-                font-weight: bold;
-                color: #ffafccff;
-
-                &:hover {
-                    color: #b392acff;
-                }
-
-            }
-
-
-        }
-
-        .grid-container {
-            max-width: 850px;
-            margin: 0 auto;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            align-items: center;
-            justify-items: center;
-            justify-content: center;
-            grid-row-gap: 15px;
-
-            div {
-                width: 25em;
-                height: 25em;
-                overflow: hidden;
-                border-radius: 25%;
-
-                .prod2a {
-
-                    width: 26em;
-                    height: 27em;
-
-                    
-                    &:hover {
-                        transform: scale(1.1) translate(3px, 3px);
-                        transition: 1s;
-                    }
-                }
-
-                .prod2b {
-                    width: 37em;
-                    height: 25em;
-
-                    &:hover {
-                        transform: scale(1.1) translate(3px, 3px);
-                        transition: 1s;
-                    }
-                }
-
-
-                .prod2c {
-                    width: 25em;
-                    height: 29em;
-
-                    &:hover {
-                        transform: scale(1.1) translate(3px, 3px);
-                        transition: 1s;
-                    }
-                }
-
-                .prod2d {
-                    position: relative;
-                    width: 35em;
-                    height: 35em;
-
-                    &:hover {
-                        transform: scale(1.1) translate(3px, 3px);
-                        transition: 1s;
-                    }
-                }
-            }
-
-        }
-    }
-
-}*/
 
 
 
@@ -286,7 +163,7 @@
                     border-radius: 25%;
                     position: relative;
                     .floatPar {
-                    @include caja-flex(center, center, row wrap);
+                      @include caja-flex(center, center, row wrap);
                       font-size: 2.25em;
                       color:$fondoNav;
                       border-radius: 15%;
@@ -298,7 +175,7 @@
                       left: 50%;
                       transform: translate(-50%, -50%);
                       opacity: 0;
-                      background-color: $lavandaVieja;
+                      background-color: $rosaTerroso;
                       text-align: center;
                       text-shadow: 0 0 8px black;
                       border-style: dashed solid;
@@ -318,10 +195,7 @@
                             color: $hoverA;
                         }
                       }
-                      &:hover {
-                        opacity: 0.85;
-                        transition: 1s;
-                      }
+                     
                     }
                     .prod2a {
 
@@ -352,8 +226,8 @@
                           transition: 1s;
                         }
                         img{
-                          transform: scale(1.1) translate(3px, 3px);
-                          transition: 1s;
+                          transform: scale(1.3) translate(3px, 3px);
+                          transition: 4s;
                         }
                       }
                 }
