--- a/css/style.css
+++ b/css/style.css
@@ -327,19 +327,13 @@ footer {
   .mainNos img {
     margin-top: auto;
     margin-bottom: 0px;
-    min-width: 100vw; }
+    min-width: 95vw; }
   .mainNos .uberuns {
     width: 50em;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow: nowrap;
-    /*.decoim {
-            width: 50em;
-            height: 9.5em;
-            opacity: 0.65;
-            
-        }*/ }
+    flex-flow: nowrap; }
     .mainNos .uberuns .sntext {
       display: flex;
       justify-content: center;
